# command-and-conquer-clone

./: .gitignore  ASSETS.md  CMakeLists.txt  HANDOFF.md  MILESTONES.md  README.md  cnc-clone-asset-sources.md  edit.bat  play-custom.bat  play.bat  td_rules.ini
docs/: REFACTOR_PLAN.md
docs/original-source/: 01-app-lifecycle-and-main-loop.md  02-object-hierarchy.md  03-map-terrain-coordinates.md  05-movement-pathfinding-combat.md  06-houses-ai-missions.md  07-ui-hud-input.md  08-file-formats-and-data.md  README.md
src/: game_main.cpp
src/formats/: aud.cpp  aud.h  cps.cpp  cps.h  fnt.cpp  fnt.h  ini.cpp  ini.h  lcw.cpp  lcw.h  palette.cpp  palette.h  sc_tileset.cpp  sc_tileset.h  shp.cpp  shp.h  shpd2.cpp  shpd2.h  tmp.cpp  tmp.h
src/game/: audio.cpp  audio.h  house.cpp  house.h  map.cpp  map.h  render.cpp  render.h  rules.cpp  rules.h  sc_isom.cpp  sc_isom.h  sc_render.cpp  sc_render.h  sim.cpp  sim.h  td_template_table.h  template_table.h
src/tools/: auddump.cpp  iniquery.cpp  mapconv.cpp  mapedit.cpp  mapview.cpp  scisomview.cpp  sctileview.cpp  shpview.cpp  tmpview.cpp
tools/: blowfish_tables.py  extract-assets.ps1  gen_blowfish_tables.py  gen_td_template_table.py  gen_template_table.py  mix_extract.py  render_index.py  render_td.py  render_td_grid.py  sc_isom.py  sc_tiles.py
